Fix Java 9 compilation warnings.