@@ -922,7 +922,7 @@ public class XmlParser extends ReaderParser implements XmlMetaProvider {
 
 	private <T> T newInstance(Class<T> c) {
 		try {
-			return c.newInstance();
+			return c.getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
 			throw asRuntimeException(e);
 		}
